--- a/Stock_Direction_Prediction_pt2.ipynb
+++ b/Stock_Direction_Prediction_pt2.ipynb
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion: This doesn't seem to work..."
+    "### Conclusion: This doesn't seem to work... :("
    ]
   },
   {
