--- a/Stock_Direction_Prediction_pt2.ipynb
+++ b/Stock_Direction_Prediction_pt2.ipynb
@@ -4,14 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Throw a neural net at a crap ton of indicators. Try to predict if the stock will go up or down in the next 5 days."
+    "# Throw a neural net at a crap ton of indicators. Try to predict if the stock will go up or down in the next n days."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +51,7 @@
     "    data.reset_index(drop=True,inplace=True)\n",
     "    data.head()\n",
     "\n",
-    "    for days in [5,7,14,21,50,100]:\n",
+    "    for days in [2,3,4,5,7,14,21,50,100]:\n",
     "        data = indicators.accumulation_distribution(data,days)\n",
     "        data = indicators.average_true_range(data,days)\n",
     "        data = indicators.bollinger_bands(data,days)\n",
@@ -82,18 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model(ticker):\n",
+    "def model(ticker, ndays):\n",
+    "    #Can we predict the direction of the stock in ndays with lots of indicators?\n",
+    "    #ex: ticker = 'AAPL'\n",
+    "    #ndays = how many days do we want to try and predict?\n",
+    "    \n",
+    "    \n",
     "    data = get_data(ticker)\n",
     "    copy_data = data.copy()\n",
-    "    data = data[:-20] #Drop last 20 days of data, save this for testing.\n",
+    "    data = data[:-1] #Drop last 1 day of data, save this for testing.\n",
     "    \n",
     "    \n",
     "    # Calculating next n day price\n",
-    "    data['Close5'] = data['Close'].shift(-5)\n",
+    "    data['Close5'] = data['Close'].shift(-ndays)\n",
     "\n",
     "    # Calculating next n direction\n",
     "    data['Direction5'] = data['Close5'] > data['Close']\n",
@@ -125,36 +138,21 @@
     "    model.fit(X_train, y_train,validation_data=(X_test,y_test), epochs=300, batch_size=100, verbose=0)\n",
     "\n",
     "\n",
-    "    # Calculating next n day price\n",
-    "    copy_data['Close5'] = copy_data['Close'].shift(-5)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # Calculating next n direction\n",
+    "    # Get copy_data to be the same as data.\n",
+    "    copy_data['Close5'] = copy_data['Close'].shift(-ndays)\n",
     "    copy_data['Direction5'] = copy_data['Close5'] > copy_data['Close']\n",
     "    copy_data = copy_data.dropna()\n",
+    "    solution = pd.Series(copy_data['Direction5'].values)\n",
+    "    X = copy_data.drop(['Close5','Direction5','Date'],axis=1, inplace=True)\n",
+    "    \n",
+    "    return solution, model, copy_data\n",
     "\n",
-    "    ts = pd.Series(copy_data['Direction5'].values)\n",
-    "\n",
-    "    X = copy_data.drop(['Close5','Direction5','Date'],axis=1, inplace=True)#,copy_data['Direction5']\n",
-    "\n",
-    "    rows, columns = copy_data.shape\n",
-    "    copy_data = copy_data[rows-15:rows]\n",
-    "    ts = ts[rows-15:rows]\n",
-    "\n",
-    "    preds = model.predict(copy_data)\n",
-    "    preds = [i > .50 for i in preds]\n",
-    "    predicted = []\n",
-    "    for pred in preds:\n",
-    "        val = pred[0]\n",
-    "        predicted.append(val)\n",
-    "    print(classification_report(ts,predicted))\n",
-    "    print(confusion_matrix(ts,predicted))\n"
+    " \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,113 +160,97 @@
      "output_type": "stream",
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(9940, 6)\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.00      0.00      0.00         1\n",
-      "        True       0.80      0.29      0.42        14\n",
-      "\n",
-      "    accuracy                           0.27        15\n",
-      "   macro avg       0.40      0.14      0.21        15\n",
-      "weighted avg       0.75      0.27      0.39        15\n",
-      "\n",
-      "[[ 0  1]\n",
-      " [10  4]]\n",
+      "(9941, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(5589, 6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.00      0.00      0.00         7\n",
-      "        True       0.53      1.00      0.70         8\n",
-      "\n",
-      "    accuracy                           0.53        15\n",
-      "   macro avg       0.27      0.50      0.35        15\n",
-      "weighted avg       0.28      0.53      0.37        15\n",
-      "\n",
-      "[[0 7]\n",
-      " [0 8]]\n",
+      "(5590, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(4021, 6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.00      0.00      0.00         6\n",
-      "        True       0.60      1.00      0.75         9\n",
-      "\n",
-      "    accuracy                           0.60        15\n",
-      "   macro avg       0.30      0.50      0.37        15\n",
-      "weighted avg       0.36      0.60      0.45        15\n",
-      "\n",
-      "[[0 6]\n",
-      " [0 9]]\n",
+      "(4022, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(10129, 6)\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.45      0.71      0.56         7\n",
-      "        True       0.50      0.25      0.33         8\n",
-      "\n",
-      "    accuracy                           0.47        15\n",
-      "   macro avg       0.48      0.48      0.44        15\n",
-      "weighted avg       0.48      0.47      0.44        15\n",
-      "\n",
-      "[[5 2]\n",
-      " [6 2]]\n",
+      "(10130, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(4991, 6)\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.33      1.00      0.50         3\n",
-      "        True       1.00      0.50      0.67        12\n",
-      "\n",
-      "    accuracy                           0.60        15\n",
-      "   macro avg       0.67      0.75      0.58        15\n",
-      "weighted avg       0.87      0.60      0.63        15\n",
-      "\n",
-      "[[3 0]\n",
-      " [6 6]]\n"
+      "(4992, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(2083, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(759, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(5340, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(2719, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(2489, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(10130, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(11951, 6)\n"
      ]
     }
    ],
    "source": [
+    "predictions = np.array([])\n",
+    "solutions = np.array([])\n",
     "#stocks chosen with : https://raybb.github.io/random-stock-picker/\n",
-    "stocks = ['AAPL', 'MUH', 'GLU', 'D', 'SAVA']\n",
+    "stocks = ['AAPL', 'MUH', 'GLU', 'D', 'SAVA', 'ACST', 'VERI', \n",
+    "          'CLSN', 'PMT', 'TSLA', 'AMD', 'AIG']\n",
+    "\n",
+    "\n",
     "for stock in stocks:\n",
-    "    model(stock)"
+    "\n",
+    "    solution, mod, data = model(stock, 1)\n",
+    "    prediction = mod.predict(data[-1:])\n",
+    "\n",
+    "    predictions = np.append(predictions, mod.predict(data[-1:])[0][0])\n",
+    "\n",
+    "    if (solution[-1:].values[0]): #if solution is true\n",
+    "        solutions = np.append(solutions,1)\n",
+    "    else:\n",
+    "        solutions = np.append(solutions,0)\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0 % correct\n"
+     ]
+    }
+   ],
    "source": [
-    "### Conclusion: This doesn't seem to work... :("
+    "correct = 0\n",
+    "for i in range(np.size(solutions)):\n",
+    "    if predictions[i] == solutions[i]:\n",
+    "        correct = correct + 1\n",
+    "        \n",
+    "percent_correct = correct/np.size(solutions) * 100\n",
+    "print('{} % correct'.format(percent_correct))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "rows, columns = copy_data.shape\n",
+    "copy_data = copy_data[rows-15:rows]\n",
+    "ts = ts[rows-15:rows]\n",
+    "\n",
+    "preds = model.predict(copy_data)\n",
+    "    preds = [i > .50 for i in preds]\n",
+    "    predicted = []\n",
+    "    for pred in preds:\n",
+    "        val = pred[0]\n",
+    "        predicted.append(val)\n",
+    "    print(classification_report(ts,predicted))\n",
+    "    print(confusion_matrix(ts,predicted))\n",
+    "'''"
    ]
   },
   {
@@ -277,6 +259,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion: This doesn't seem to work... :("
+   ]
   }
  ],
  "metadata": {
