This follows the market, can we get certainity of the model out and trade based on that?

--- a/Stock_Direction_Prediction_pt2.ipynb
+++ b/Stock_Direction_Prediction_pt2.ipynb
@@ -33,7 +33,8 @@
     "from keras.layers import Dense,Dropout\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
-    "from sklearn.metrics import classification_report,confusion_matrix"
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "\n"
    ]
   },
   {
@@ -52,6 +53,7 @@
     "    data.head()\n",
     "\n",
     "    for days in [2,3,4,5,7,14,21,50,100]:\n",
+    "        '''\n",
     "        data = indicators.accumulation_distribution(data,days)\n",
     "        data = indicators.average_true_range(data,days)\n",
     "        data = indicators.bollinger_bands(data,days)\n",
@@ -74,10 +76,11 @@
     "        data = indicators.trix(data,days)\n",
     "        data = indicators.vortex_indicator(data,days)\n",
     "\n",
-    "\n",
-    "\n",
-    "    data = indicators.mass_index(data)\n",
-    "    data = indicators.ppsr(data)\n",
+    "        '''\n",
+    "        data = indicators.momentum(data,days)\n",
+    "        data = indicators.stochastic_oscillator_d(data,days)\n",
+    "    #data = indicators.mass_index(data)\n",
+    "    #data = indicators.ppsr(data)\n",
     "    data = indicators.stochastic_oscillator_k(data)\n",
     "    data = indicators.ultimate_oscillator(data)    \n",
     "    data = indicators.chaikin_oscillator(data)\n",
@@ -160,29 +163,29 @@
      "output_type": "stream",
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(9941, 6)\n",
+      "(9942, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(5590, 6)\n",
+      "(5591, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(4022, 6)\n",
+      "(4023, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(10130, 6)\n",
+      "(10131, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(4992, 6)\n",
+      "(4993, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(2083, 6)\n",
+      "(2084, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(759, 6)\n",
+      "(760, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(5340, 6)\n",
+      "(5341, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(2719, 6)\n",
+      "(2720, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(2489, 6)\n",
+      "(2490, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(10130, 6)\n",
+      "(10131, 6)\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "(11951, 6)\n"
+      "(11952, 6)\n"
      ]
     }
    ],
@@ -193,6 +196,8 @@
     "stocks = ['AAPL', 'MUH', 'GLU', 'D', 'SAVA', 'ACST', 'VERI', \n",
     "          'CLSN', 'PMT', 'TSLA', 'AMD', 'AIG']\n",
     "\n",
+    "stocks2 = ['IDEX', 'DSLV', 'BKH', 'WSBF', 'EOD', 'TDI', 'GGT', 'SPE', \n",
+    "          'MBII', 'TCO', 'KNOW', 'OPOF']\n",
     "\n",
     "for stock in stocks:\n",
     "\n",
@@ -210,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.0 % correct\n"
+      "41.66666666666667 % correct\n"
      ]
     }
    ],
@@ -233,9 +238,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(3270, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(2161, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(11916, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(3680, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(3310, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(3803, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(6447, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(6793, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(1711, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(6923, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(2124, 6)\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "(5374, 6)\n",
+      "Trial two with different stocks 33.33333333333333 % correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = np.array([])\n",
+    "solutions = np.array([])\n",
+    "for stock in stocks2:\n",
+    "\n",
+    "    solution, mod, data = model(stock, 1)\n",
+    "    prediction = mod.predict(data[-1:])\n",
+    "\n",
+    "    predictions = np.append(predictions, mod.predict(data[-1:])[0][0])\n",
+    "\n",
+    "    if (solution[-1:].values[0]): #if solution is true\n",
+    "        solutions = np.append(solutions,1)\n",
+    "    else:\n",
+    "        solutions = np.append(solutions,0)\n",
+    "\n",
+    "\n",
+    "correct = 0\n",
+    "for i in range(np.size(solutions)):\n",
+    "    if predictions[i] == solutions[i]:\n",
+    "        correct = correct + 1\n",
+    "        \n",
+    "percent_correct = correct/np.size(solutions) * 100\n",
+    "print('Trial two with different stocks {} % correct'.format(percent_correct))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nrows, columns = copy_data.shape\\ncopy_data = copy_data[rows-15:rows]\\nts = ts[rows-15:rows]\\n\\npreds = model.predict(copy_data)\\n    preds = [i > .50 for i in preds]\\n    predicted = []\\n    for pred in preds:\\n        val = pred[0]\\n        predicted.append(val)\\n    print(classification_report(ts,predicted))\\n    print(confusion_matrix(ts,predicted))\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "rows, columns = copy_data.shape\n",
@@ -252,13 +330,6 @@
     "    print(confusion_matrix(ts,predicted))\n",
     "'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -284,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
